# coinbase_client

./: Cargo.toml  README.md
src/: error.rs  json.rs  lib.rs  private_client.rs  public_client.rs
src/coinbase_client/: mod.rs  public_client.rs
src/json/: deserialize.rs  json.rs  mod.rs
src/private_client/: mod.rs  order.rs  private_client.rs  report.rs
src/public_client/: mod.rs  public_client.rs
src/rusty_coin/: error.rs  json.rs  mod.rs  public_client.rs  tests.rs
tests/: mod.rs  private_client.rs  public_client.rs
