[package]
name = "rusty_coin"
version = "0.1.0"
authors = ["Elijah Woelbing <woelbingelijah@gmail.com>"]
edition = "2018"
repository = "https://github.com/ElijahWoelbing/rusty_coin"
documentation = ""
homepage = ""
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["coinbase", "coinbase pro", "cryptocurrency",]
exclude = [
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.14"
reqwest = { version = "0.11", features = ["json","stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
rust-crypto = "0.2.36"
base64 = "0.13.0"
chrono = "0.4.19"