[package]
name = "coinbase-client"
version = "0.1.1"
authors = ["Elijah Woelbing <woelbingelijah@gmail.com>"]
edition = "2018"
description = "asynchronous library for the Coinbase's Pro API"
readme = "README.md"
repository = "https://github.com/ElijahWoelbing/coinbase_client"
license = "MIT OR Apache-2.0"
keywords = ["coinbase", "cryptocurrency",]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.14"
reqwest = { version = "0.11", features = ["json","stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
rust-crypto = "0.2.36"
base64 = "0.13.0"
chrono = "0.4.19"

[dev-dependencies]
dotenv = "0.15.0"